# connectedhomeip

./: .gitmodules
config/esp32/components/chip/: CMakeLists.txt
src/include/platform/: CHIPDeviceConfig.h
src/platform/ESP32/: ConfigurationManagerImpl.cpp  ConnectivityManagerImpl.h  Logging.cpp  NetworkCommissioningDriver.cpp  OTAImageProcessorImpl.cpp
